# chatgpt-web-adapter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  building_on_top.md  live_smoke_checklist.md  raw_payload.md  release_checklist.md  rename_compatibility.md  required_actions.md
examples/: approve_tools.py  attach_existing.py  basic_send.py  continue_saved.py  diagnose_latency.py  github_auto_approve.py  raw_payload.py  read_messages.py  status_polling.py  watch_conversation.py
src/chatgpt_web_adapter/: __init__.py  approval_policy.py  approval_types.py  attach.py  client.py  conversation_send.py  diagnostic_metrics.py  export.py  model_detection.py  payload_builder.py  policy_approval.py  required_action.py  status.py  types.py
src/webchat_adapter/: __init__.py  approval_events.py  approval_policy.py  approval_runtime.py  approval_types.py  attach.py  auth.py  client.py  diagnostic_metrics.py  errors.py  exceptions.py  message_text.py  messages.py  model_detection.py  payload_validation.py  policy_approval.py  raw_payload.py  status.py  types.py  wait.py
tests/: test_approval_metrics_integration.py  test_approval_policy.py  test_approval_types.py  test_attach_conversation.py  test_attached_conversation.py  test_auth.py  test_chat_message.py  test_chat_metrics.py  test_client.py  test_conversation_ref.py  test_conversation_status.py  test_examples_pack.py  test_export_conversation.py  test_get_messages.py  test_get_messages_model_metadata.py  test_get_messages_text_extraction.py  test_get_status.py  test_message_text_extraction.py  test_model_detection.py  test_payload_builder.py  test_payload_validation.py  test_pending_approval.py  test_policy_aware_approval.py  test_public_api_surface.py  test_raw_payload_docs.py  test_readme_positioning.py  test_rename_compatibility_docs.py  test_request_error.py  test_required_action.py  test_send_metrics.py  test_send_payload.py  test_send_to_conversation.py  test_wait_until_completed.py  test_watch_conversation_example.py
