[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-web-adapter"
version = "0.1.3"
description = "Minimal dependency-free Python adapter for chatgpt.com web sessions."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "kymuco" }
]
keywords = ["chatgpt", "adapter", "sdk", "webchat"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/kymuco/chatgpt-web-adapter"
Repository = "https://github.com/kymuco/chatgpt-web-adapter"
Issues = "https://github.com/kymuco/chatgpt-web-adapter/issues"
Changelog = "https://github.com/kymuco/chatgpt-web-adapter/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]